<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.addmoney.AddMoneyFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddMoneyTitle"
        style="@style/TextBalanceTitle"
        android:text="@string/memo_pay_balance"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAccountBalance"
        style="@style/TextBalanceAmount"
        app:layout_constraintLeft_toRightOf="@id/tvAddMoneyTitle"
        android:layout_marginTop="@dimen/margin_4dp"
        app:layout_constraintLeft_toLeftOf="@id/tvAddMoneyTitle"
        app:layout_constraintRight_toRightOf="@id/tvAddMoneyTitle"
        app:layout_constraintTop_toBottomOf="@id/tvAddMoneyTitle"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEnterAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/tvAddMoneyTitle"
        app:layout_constraintRight_toRightOf="@id/tvAddMoneyTitle"
        android:hint="@string/enter_amount_aed"
        android:textSize="36sp"
        android:background="@null"
        android:inputType="numberDecimal"
        android:layout_marginTop="?listPreferredItemHeightSmall"
        app:layout_constraintTop_toBottomOf="@id/tvAccountBalance"/>

    <include  android:id="@+id/chipGroup"
        layout="@layout/chips_layout"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="?listPreferredItemHeightSmall"
        app:layout_constraintLeft_toLeftOf="@id/tvAddMoneyTitle"
        app:layout_constraintRight_toRightOf="@id/tvAddMoneyTitle"
        app:layout_constraintTop_toBottomOf="@id/etEnterAmount"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTopUP"
        style="@style/BlueButton"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/margin_24dp"
        app:layout_constraintLeft_toLeftOf="@id/tvAddMoneyTitle"
        app:layout_constraintRight_toRightOf="@id/tvAddMoneyTitle"
        app:layout_constraintTop_toBottomOf="@id/chipGroup"
        android:text="@string/top_up_wallet"/>


    <FrameLayout
        android:id="@+id/progressbarAddMoney"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/default_margin"
        android:visibility="gone"
        android:background="@color/windowBackgroundColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>