...
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="0dp"
        tools:text="AED 2170.00" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddMoney"
        style="@style/MoneyActionButton"
        android:layout_marginTop="@dimen/margin_24dp"
        android:drawableTop="@drawable/ic_add_rounded_white"
        android:text="@string/add_money"
        app:layout_constraintEnd_toStartOf="@+id/tvSendMoney"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/tvAccountBalance" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSendMoney"
...
